// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu renders a Menu 1`] = `
.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c5.c5.c5.c5.c5 {
  z-index: 1234;
  min-width: 200px;
}

.c7.c7.c7.c7.c7 {
  padding-top: 8px;
  padding-bottom: 12px;
  padding-right: 8px;
  padding-left: 8px;
  background-color: hsla(0,0%,100%,0.94);
  border-radius: 12px;
  border-width: 0px;
  border-style: solid;
}

.c9.c9.c9.c9.c9 {
  margin-bottom: 8px;
}

.c10.c10.c10.c10.c10 {
  padding-right: 8px;
  padding-left: 8px;
  margin-bottom: 8px;
  margin-top: 0px;
  touch-action: none;
}

.c11.c11.c11.c11.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c12.c12.c12.c12.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 16px;
  margin-right: auto;
}

.c13.c13.c13.c13.c13 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
}

.c14.c14.c14.c14.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c17.c17.c17.c17.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
}

.c18.c18.c18.c18.c18 {
  width: 100%;
}

.c19.c19.c19.c19.c19 {
  margin-bottom: 2px;
  margin-top: 2px;
  margin-right: -8px;
  margin-left: -8px;
  border-bottom-color: hsla(206,10%,29%,0.12);
  border-bottom-style: solid;
}

.c23.c23.c23.c23.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  width: 100%;
}

.c24.c24.c24.c24.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 20px;
}

.c25.c25.c25.c25.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-right: 8px;
  padding-left: 0px;
}

.c26.c26.c26.c26.c26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 20px;
}

.c28.c28.c28.c28.c28 {
  margin-left: auto;
}

.c29.c29.c29.c29.c29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-right: 8px;
  padding-left: 8px;
}

.c33.c33.c33.c33.c33 {
  margin-top: 8px;
}

.c34.c34.c34.c34.c34 {
  padding: 8px 8px 0px 8px;
}

.c22.c22.c22.c22.c22 {
  border-width: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: left;
  background-color: transparent;
  border-radius: 8px;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  width: 100%;
  padding: 4px;
}

.c22.c22.c22.c22.c22:hover:not([aria-disabled=true]),
.c22.c22.c22.c22.c22[aria-expanded="true"] {
  background-color: hsla(206,10%,29%,0.06);
}

.c22.c22.c22.c22.c22:focus-visible {
  outline: 4px solid hsla(218,89%,51%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  z-index: 2;
}

.c22.c22.c22.c22.c22[aria-selected=true],
.c22.c22.c22.c22.c22[aria-selected=true]:hover {
  background-color: hsla(206,10%,29%,0.09);
}

.c31.c31.c31.c31.c31 {
  border-width: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: left;
  background-color: transparent;
  border-radius: 8px;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  width: 100%;
  padding: 4px;
}

.c31.c31.c31.c31.c31:hover:not([aria-disabled=true]),
.c31.c31.c31.c31.c31[aria-expanded="true"] {
  background-color: hsla(4,85%,44%,0.09);
}

.c31.c31.c31.c31.c31:focus-visible {
  outline: 4px solid hsla(218,89%,51%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  z-index: 2;
}

.c31.c31.c31.c31.c31[aria-selected=true],
.c31.c31.c31.c31.c31[aria-selected=true]:hover {
  background-color: hsla(206,10%,29%,0.09);
}

.c4.c4.c4.c4.c4 {
  color: hsla(0,0%,100%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
  margin-right: 4px;
  margin-left: 4px;
}

.c15.c15.c15.c15.c15 {
  color: hsla(0,0%,2%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: -0.528px;
  -moz-letter-spacing: -0.528px;
  -ms-letter-spacing: -0.528px;
  letter-spacing: -0.528px;
  margin: 0;
  padding: 0;
  word-break: break-word;
  margin-top: 1px;
}

.c16.c16.c16.c16.c16 {
  color: hsla(204,9%,42%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.0625rem;
  -webkit-letter-spacing: -0.15600000000000003px;
  -moz-letter-spacing: -0.15600000000000003px;
  -ms-letter-spacing: -0.15600000000000003px;
  letter-spacing: -0.15600000000000003px;
  margin: 0;
  padding: 0;
}

.c21.c21.c21.c21.c21 {
  color: hsla(0,0%,2%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.18200000000000002px;
  -moz-letter-spacing: -0.18200000000000002px;
  -ms-letter-spacing: -0.18200000000000002px;
  letter-spacing: -0.18200000000000002px;
  margin: 0;
  padding: 0;
}

.c27.c27.c27.c27.c27 {
  color: hsla(0,0%,2%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
  word-break: break-all;
}

.c30.c30.c30.c30.c30 {
  color: hsla(204,9%,42%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.18200000000000002px;
  -moz-letter-spacing: -0.18200000000000002px;
  -ms-letter-spacing: -0.18200000000000002px;
  letter-spacing: -0.18200000000000002px;
  margin: 0;
  padding: 0;
}

.c32.c32.c32.c32.c32 {
  color: hsla(4,85%,44%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
  word-break: break-all;
}

.c6.c6.c6.c6.c6:focus-visible {
  outline: none;
}

.c8.c8.c8.c8.c8 {
  -webkit-backdrop-filter: blur(8px);
  backdrop-filter: blur(8px);
  box-shadow: inset 0px 0px 0px 1px hsla(206,10%,29%,0.09),0px 16px 12px 0px hsla(200,10%,18%,0.06),inset 0px 0px 0px 0px hsla(200,10%,94%,1);
}

.c20.c20.c20.c20.c20 {
  border-width: 0;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0.c0.c0.c0.c0 {
  min-height: 36px;
  width: auto;
  cursor: pointer;
  background-color: hsla(218,89%,51%,1);
  border: none;
  border-radius: 8px;
  box-shadow: inset 0 -1.5px 0px 0px hsla(218,87%,43%,1),inset 0 0px 0px 0.5px hsla(218,89%,51%,1),inset 0 1.5px 0px 0px hsla(0,0%,100%,0.18),inset 0 -2px 0px 0px hsla(0,0%,100%,0.18);
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 12px;
  padding-right: 12px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background-image: radial-gradient(64px 64px at var(--mouse-x,0%) var(--mouse-y,0%),hsla(0,0%,100%,0.18) 0%,transparent 100%);
  -webkit-transition-property: background-color,background-image,box-shadow;
  transition-property: background-color,background-image,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  position: relative;
}

.c0.c0.c0.c0.c0:hover {
  background-color: hsla(218,87%,43%,1);
  box-shadow: inset 0 -1.5px 0px 0px hsla(218,87%,43%,1),inset 0 0px 0px 0.5px hsla(218,87%,43%,1),inset 0 1.5px 0px 0px hsla(0,0%,100%,0.18),inset 0 -2px 0px 0px hsla(0,0%,100%,0.18);
  background-image: none;
}

.c0.c0.c0.c0.c0:active {
  background-color: hsla(218,87%,43%,1);
  box-shadow: inset 0 -1.5px 0px 0px hsla(218,87%,43%,1),inset 0 0px 0px 0.5px hsla(218,87%,43%,1),inset 0 1.5px 0px 0px hsla(0,0%,100%,0.18),inset 0 -2px 0px 0px hsla(0,0%,100%,0.18);
  background-image: none;
}

.c0.c0.c0.c0.c0:focus-visible {
  background-color: hsla(218,87%,43%,1);
  outline: 1px solid hsla(218,89%,51%,0.09);
  background-image: none;
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18),inset 0 -1.5px 0px 0px hsla(218,87%,43%,1),inset 0 0px 0px 0.5px hsla(218,87%,43%,1),inset 0 1.5px 0px 0px hsla(0,0%,100%,0.18),inset 0 -2px 0px 0px hsla(0,0%,100%,0.18);
}

.c0.c0.c0.c0.c0 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c1.c1.c1.c1.c1 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 160px;
  transition-timing-function: 160px;
}

.c3.c3.c3.c3.c3 {
  opacity: 1;
}

@media screen and (min-width:480px) {
  .c5.c5.c5.c5.c5 {
    min-width: 240px;
  }
}

@media screen and (min-width:320px) {
  .c7.c7.c7.c7.c7 {
    border-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c7.c7.c7.c7.c7 {
    border-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c7.c7.c7.c7.c7 {
    border-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c7.c7.c7.c7.c7 {
    border-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c7.c7.c7.c7.c7 {
    border-style: solid;
  }
}

@media screen and (min-width:320px) {
  .c19.c19.c19.c19.c19 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c19.c19.c19.c19.c19 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c19.c19.c19.c19.c19 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c19.c19.c19.c19.c19 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c19.c19.c19.c19.c19 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c22.c22.c22.c22.c22 {
    padding: 8px;
  }
}

@media screen and (min-width:768px) {
  .c31.c31.c31.c31.c31 {
    padding: 8px;
  }
}

<body>
  <div
    data-floating-ui-inert=""
  >
    <button
      aria-expanded="true"
      aria-haspopup="menu"
      class="c0"
      data-blade-component="button"
      role="button"
      type="button"
    >
      <div
        class=" c1"
        data-blade-component="base-box"
      >
        <div
          class="c2 c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-text"
          >
            Open Menu
          </div>
        </div>
      </div>
    </button>
    <span
      data-floating-ui-focus-guard=""
      data-type="outside"
      role="button"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
      tabindex="0"
    />
    <span
      aria-owns=":r3:"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
    />
    <span
      data-floating-ui-focus-guard=""
      data-type="outside"
      role="button"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
      tabindex="0"
    />
  </div>
  <div
    data-floating-ui-portal=""
    id=":r3:"
  >
    <span
      data-floating-ui-focus-guard=""
      data-floating-ui-inert=""
      data-type="inside"
      role="button"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
      tabindex="0"
    />
    <div
      aria-labelledby=":r2:"
      aria-orientation="vertical"
      class="c5 c6"
      data-blade-component="menu"
      id=":r1:"
      role="menu"
      style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 8px); max-height: -8px;"
      tabindex="-1"
    >
      <div
        class="c7 c8"
        data-blade-component="base-box"
        style="transform: translateY(-8px); opacity: 0;"
      >
        <div
          class="c9"
          data-blade-component="box"
        >
          <div
            class=""
            data-blade-component="menu-header"
          >
            <div
              class="c10"
              data-blade-component="base-box"
            >
              <div
                class="c11"
                data-blade-component="base-box"
              >
                <div
                  class="c12"
                  data-blade-component="base-box"
                >
                  <div
                    class="c13"
                    data-blade-component="base-box"
                  >
                    <div
                      class="c14"
                      data-blade-component="base-box"
                    >
                      <p
                        class="c15"
                        data-blade-component="text"
                        letter-spacing="25"
                      >
                        Header Title
                      </p>
                    </div>
                    <p
                      class="c16"
                      data-blade-component="text"
                      letter-spacing="50"
                    >
                      Subtitle
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="c17"
                data-blade-component="base-box"
              >
                <div
                  class="c18"
                  data-blade-component="box"
                />
              </div>
            </div>
          </div>
          <div
            class="c19 c20"
            data-blade-component="divider"
            role="separator"
          />
        </div>
        <div
          class=""
          data-blade-component="box"
        >
          <p
            class="c21"
            data-blade-component="text"
            letter-spacing="50"
          >
            Custom Slot
          </p>
        </div>
        <a
          class=" c22"
          data-blade-component="base-box"
          href="/accounts"
          role="menuitem"
          type="button"
        >
          <div
            class="c23"
            data-blade-component="box"
          >
            <div
              class="c24"
              data-blade-component="box"
            />
            <div
              class="c25"
              data-blade-component="box"
            >
              <div
                class="c26"
                data-blade-component="box"
              >
                <p
                  class="c27"
                  data-blade-component="text"
                >
                  Account
                </p>
              </div>
              <div
                class=""
                data-blade-component="box"
              >
                <p
                  class="c16"
                  data-blade-component="text"
                  letter-spacing="50"
                >
                  Accounts
                </p>
              </div>
            </div>
            <div
              class="c28"
              data-blade-component="box"
            />
          </div>
        </a>
        <button
          class=" c22"
          data-blade-component="base-box"
          role="menuitem"
          type="button"
        >
          <div
            class="c23"
            data-blade-component="box"
          >
            <div
              class="c24"
              data-blade-component="box"
            >
              <svg
                aria-hidden="true"
                class="Svgweb__StyledSvg-vcmjs8-0"
                data-blade-component="icon"
                fill="none"
                height="12px"
                viewBox="0 0 24 24"
                width="12px"
              >
                <path
                  clip-rule="evenodd"
                  d="M12 2C9.23858 2 7 4.23858 7 7C7 9.76142 9.23858 12 12 12C14.7614 12 17 9.76142 17 7C17 4.23858 14.7614 2 12 2ZM9 7C9 5.34315 10.3431 4 12 4C13.6569 4 15 5.34315 15 7C15 8.65685 13.6569 10 12 10C10.3431 10 9 8.65685 9 7Z"
                  data-blade-component="svg-path"
                  fill="hsla(0, 0%, 2%, 1)"
                  fill-rule="evenodd"
                />
                <path
                  d="M8 14C5.23858 14 3 16.2386 3 19V21C3 21.5523 3.44772 22 4 22C4.55228 22 5 21.5523 5 21V19C5 17.3431 6.34315 16 8 16H16C17.6569 16 19 17.3431 19 19V21C19 21.5523 19.4477 22 20 22C20.5523 22 21 21.5523 21 21V19C21 16.2386 18.7614 14 16 14H8Z"
                  data-blade-component="svg-path"
                  fill="hsla(0, 0%, 2%, 1)"
                />
              </svg>
            </div>
            <div
              class="c29"
              data-blade-component="box"
            >
              <div
                class="c26"
                data-blade-component="box"
              >
                <p
                  class="c27"
                  data-blade-component="text"
                >
                  Profile
                </p>
              </div>
              <div
                class=""
                data-blade-component="box"
              />
            </div>
            <div
              class="c28"
              data-blade-component="box"
            />
          </div>
        </button>
        <button
          class=" c22"
          data-blade-component="base-box"
          role="menuitem"
          type="button"
        >
          <div
            class="c23"
            data-blade-component="box"
          >
            <div
              class="c24"
              data-blade-component="box"
            />
            <div
              class="c25"
              data-blade-component="box"
            >
              <div
                class="c26"
                data-blade-component="box"
              >
                <p
                  class="c27"
                  data-blade-component="text"
                >
                  Settings
                </p>
              </div>
              <div
                class=""
                data-blade-component="box"
              />
            </div>
            <div
              class="c28"
              data-blade-component="box"
            >
              <p
                class="c30"
                data-blade-component="text"
                letter-spacing="50"
              >
                Cmd + S
              </p>
            </div>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          class=" c22"
          data-blade-component="base-box"
          id=":r6:"
          role="menuitem"
          type="button"
        >
          <div
            class="c23"
            data-blade-component="box"
          >
            <div
              class="c24"
              data-blade-component="box"
            />
            <div
              class="c25"
              data-blade-component="box"
            >
              <div
                class="c26"
                data-blade-component="box"
              >
                <p
                  class="c27"
                  data-blade-component="text"
                >
                  Share
                </p>
              </div>
              <div
                class=""
                data-blade-component="box"
              />
            </div>
            <div
              class="c28"
              data-blade-component="box"
            >
              <svg
                aria-hidden="true"
                class="Svgweb__StyledSvg-vcmjs8-0"
                data-blade-component="icon"
                fill="none"
                height="16px"
                viewBox="0 0 24 24"
                width="16px"
              >
                <path
                  clip-rule="evenodd"
                  d="M8.29289 5.29289C8.68342 4.90237 9.31658 4.90237 9.70711 5.29289L15.7071 11.2929C16.0976 11.6834 16.0976 12.3166 15.7071 12.7071L9.70711 18.7071C9.31658 19.0976 8.68342 19.0976 8.29289 18.7071C7.90237 18.3166 7.90237 17.6834 8.29289 17.2929L13.5858 12L8.29289 6.70711C7.90237 6.31658 7.90237 5.68342 8.29289 5.29289Z"
                  data-blade-component="svg-path"
                  fill="hsla(0, 0%, 2%, 1)"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
        </button>
        <button
          class=" c31"
          data-blade-component="base-box"
          role="menuitem"
          type="button"
        >
          <div
            class="c23"
            data-blade-component="box"
          >
            <div
              class="c24"
              data-blade-component="box"
            />
            <div
              class="c25"
              data-blade-component="box"
            >
              <div
                class="c26"
                data-blade-component="box"
              >
                <p
                  class="c32"
                  data-blade-component="text"
                >
                  Log Out
                </p>
              </div>
              <div
                class=""
                data-blade-component="box"
              />
            </div>
            <div
              class="c28"
              data-blade-component="box"
            />
          </div>
        </button>
        <div
          class="c33"
          data-blade-component="box"
        >
          <div
            class="c19 c20"
            data-blade-component="divider"
            role="separator"
          />
          <div
            class="c34"
            data-blade-component="menu-footer"
          >
            <p
              class="c21"
              data-blade-component="text"
              letter-spacing="50"
            >
              Footer slot
            </p>
          </div>
        </div>
      </div>
    </div>
    <span
      data-floating-ui-focus-guard=""
      data-floating-ui-inert=""
      data-type="inside"
      role="button"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Menu should support data-analytics attribute 1`] = `
.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c5.c5.c5.c5.c5 {
  z-index: 1234;
  min-width: 200px;
}

.c7.c7.c7.c7.c7 {
  padding-top: 8px;
  padding-bottom: 12px;
  padding-right: 8px;
  padding-left: 8px;
  background-color: hsla(0,0%,100%,0.94);
  border-radius: 12px;
  border-width: 0px;
  border-style: solid;
}

.c9.c9.c9.c9.c9 {
  margin-bottom: 8px;
}

.c10.c10.c10.c10.c10 {
  padding-right: 8px;
  padding-left: 8px;
  margin-bottom: 8px;
  margin-top: 0px;
  touch-action: none;
}

.c11.c11.c11.c11.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c12.c12.c12.c12.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 16px;
  margin-right: auto;
}

.c13.c13.c13.c13.c13 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
}

.c14.c14.c14.c14.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c17.c17.c17.c17.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
}

.c18.c18.c18.c18.c18 {
  width: 100%;
}

.c19.c19.c19.c19.c19 {
  margin-bottom: 2px;
  margin-top: 2px;
  margin-right: -8px;
  margin-left: -8px;
  border-bottom-color: hsla(206,10%,29%,0.12);
  border-bottom-style: solid;
}

.c23.c23.c23.c23.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  width: 100%;
}

.c24.c24.c24.c24.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 20px;
}

.c25.c25.c25.c25.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-right: 8px;
  padding-left: 0px;
}

.c26.c26.c26.c26.c26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 20px;
}

.c28.c28.c28.c28.c28 {
  margin-left: auto;
}

.c29.c29.c29.c29.c29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-right: 8px;
  padding-left: 8px;
}

.c33.c33.c33.c33.c33 {
  margin-top: 8px;
}

.c34.c34.c34.c34.c34 {
  padding: 8px 8px 0px 8px;
}

.c22.c22.c22.c22.c22 {
  border-width: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: left;
  background-color: transparent;
  border-radius: 8px;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  width: 100%;
  padding: 4px;
}

.c22.c22.c22.c22.c22:hover:not([aria-disabled=true]),
.c22.c22.c22.c22.c22[aria-expanded="true"] {
  background-color: hsla(206,10%,29%,0.06);
}

.c22.c22.c22.c22.c22:focus-visible {
  outline: 4px solid hsla(218,89%,51%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  z-index: 2;
}

.c22.c22.c22.c22.c22[aria-selected=true],
.c22.c22.c22.c22.c22[aria-selected=true]:hover {
  background-color: hsla(206,10%,29%,0.09);
}

.c31.c31.c31.c31.c31 {
  border-width: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: left;
  background-color: transparent;
  border-radius: 8px;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  width: 100%;
  padding: 4px;
}

.c31.c31.c31.c31.c31:hover:not([aria-disabled=true]),
.c31.c31.c31.c31.c31[aria-expanded="true"] {
  background-color: hsla(4,85%,44%,0.09);
}

.c31.c31.c31.c31.c31:focus-visible {
  outline: 4px solid hsla(218,89%,51%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  z-index: 2;
}

.c31.c31.c31.c31.c31[aria-selected=true],
.c31.c31.c31.c31.c31[aria-selected=true]:hover {
  background-color: hsla(206,10%,29%,0.09);
}

.c4.c4.c4.c4.c4 {
  color: hsla(0,0%,100%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
  margin-right: 4px;
  margin-left: 4px;
}

.c15.c15.c15.c15.c15 {
  color: hsla(0,0%,2%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: -0.528px;
  -moz-letter-spacing: -0.528px;
  -ms-letter-spacing: -0.528px;
  letter-spacing: -0.528px;
  margin: 0;
  padding: 0;
  word-break: break-word;
  margin-top: 1px;
}

.c16.c16.c16.c16.c16 {
  color: hsla(204,9%,42%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.0625rem;
  -webkit-letter-spacing: -0.15600000000000003px;
  -moz-letter-spacing: -0.15600000000000003px;
  -ms-letter-spacing: -0.15600000000000003px;
  letter-spacing: -0.15600000000000003px;
  margin: 0;
  padding: 0;
}

.c21.c21.c21.c21.c21 {
  color: hsla(0,0%,2%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.18200000000000002px;
  -moz-letter-spacing: -0.18200000000000002px;
  -ms-letter-spacing: -0.18200000000000002px;
  letter-spacing: -0.18200000000000002px;
  margin: 0;
  padding: 0;
}

.c27.c27.c27.c27.c27 {
  color: hsla(0,0%,2%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
  word-break: break-all;
}

.c30.c30.c30.c30.c30 {
  color: hsla(204,9%,42%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.18200000000000002px;
  -moz-letter-spacing: -0.18200000000000002px;
  -ms-letter-spacing: -0.18200000000000002px;
  letter-spacing: -0.18200000000000002px;
  margin: 0;
  padding: 0;
}

.c32.c32.c32.c32.c32 {
  color: hsla(4,85%,44%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
  word-break: break-all;
}

.c6.c6.c6.c6.c6:focus-visible {
  outline: none;
}

.c8.c8.c8.c8.c8 {
  -webkit-backdrop-filter: blur(8px);
  backdrop-filter: blur(8px);
  box-shadow: inset 0px 0px 0px 1px hsla(206,10%,29%,0.09),0px 16px 12px 0px hsla(200,10%,18%,0.06),inset 0px 0px 0px 0px hsla(200,10%,94%,1);
}

.c20.c20.c20.c20.c20 {
  border-width: 0;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0.c0.c0.c0.c0 {
  min-height: 36px;
  width: auto;
  cursor: pointer;
  background-color: hsla(218,89%,51%,1);
  border: none;
  border-radius: 8px;
  box-shadow: inset 0 -1.5px 0px 0px hsla(218,87%,43%,1),inset 0 0px 0px 0.5px hsla(218,89%,51%,1),inset 0 1.5px 0px 0px hsla(0,0%,100%,0.18),inset 0 -2px 0px 0px hsla(0,0%,100%,0.18);
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 12px;
  padding-right: 12px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background-image: radial-gradient(64px 64px at var(--mouse-x,0%) var(--mouse-y,0%),hsla(0,0%,100%,0.18) 0%,transparent 100%);
  -webkit-transition-property: background-color,background-image,box-shadow;
  transition-property: background-color,background-image,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  position: relative;
}

.c0.c0.c0.c0.c0:hover {
  background-color: hsla(218,87%,43%,1);
  box-shadow: inset 0 -1.5px 0px 0px hsla(218,87%,43%,1),inset 0 0px 0px 0.5px hsla(218,87%,43%,1),inset 0 1.5px 0px 0px hsla(0,0%,100%,0.18),inset 0 -2px 0px 0px hsla(0,0%,100%,0.18);
  background-image: none;
}

.c0.c0.c0.c0.c0:active {
  background-color: hsla(218,87%,43%,1);
  box-shadow: inset 0 -1.5px 0px 0px hsla(218,87%,43%,1),inset 0 0px 0px 0.5px hsla(218,87%,43%,1),inset 0 1.5px 0px 0px hsla(0,0%,100%,0.18),inset 0 -2px 0px 0px hsla(0,0%,100%,0.18);
  background-image: none;
}

.c0.c0.c0.c0.c0:focus-visible {
  background-color: hsla(218,87%,43%,1);
  outline: 1px solid hsla(218,89%,51%,0.09);
  background-image: none;
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18),inset 0 -1.5px 0px 0px hsla(218,87%,43%,1),inset 0 0px 0px 0.5px hsla(218,87%,43%,1),inset 0 1.5px 0px 0px hsla(0,0%,100%,0.18),inset 0 -2px 0px 0px hsla(0,0%,100%,0.18);
}

.c0.c0.c0.c0.c0 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c1.c1.c1.c1.c1 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 160px;
  transition-timing-function: 160px;
}

.c3.c3.c3.c3.c3 {
  opacity: 1;
}

@media screen and (min-width:480px) {
  .c5.c5.c5.c5.c5 {
    min-width: 240px;
  }
}

@media screen and (min-width:320px) {
  .c7.c7.c7.c7.c7 {
    border-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c7.c7.c7.c7.c7 {
    border-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c7.c7.c7.c7.c7 {
    border-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c7.c7.c7.c7.c7 {
    border-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c7.c7.c7.c7.c7 {
    border-style: solid;
  }
}

@media screen and (min-width:320px) {
  .c19.c19.c19.c19.c19 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c19.c19.c19.c19.c19 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c19.c19.c19.c19.c19 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c19.c19.c19.c19.c19 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c19.c19.c19.c19.c19 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c22.c22.c22.c22.c22 {
    padding: 8px;
  }
}

@media screen and (min-width:768px) {
  .c31.c31.c31.c31.c31 {
    padding: 8px;
  }
}

<body>
  <div
    data-floating-ui-inert=""
  >
    <button
      aria-expanded="true"
      aria-haspopup="menu"
      class="c0"
      data-blade-component="button"
      role="button"
      type="button"
    >
      <div
        class=" c1"
        data-blade-component="base-box"
      >
        <div
          class="c2 c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-text"
          >
            Open Menu
          </div>
        </div>
      </div>
    </button>
    <span
      data-floating-ui-focus-guard=""
      data-type="outside"
      role="button"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
      tabindex="0"
    />
    <span
      aria-owns=":rv:"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
    />
    <span
      data-floating-ui-focus-guard=""
      data-type="outside"
      role="button"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
      tabindex="0"
    />
  </div>
  <div
    data-floating-ui-portal=""
    id=":rv:"
  >
    <span
      data-floating-ui-focus-guard=""
      data-floating-ui-inert=""
      data-type="inside"
      role="button"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
      tabindex="0"
    />
    <div
      aria-labelledby=":ru:"
      aria-orientation="vertical"
      class="c5 c6"
      data-analytics-menu="user"
      data-blade-component="menu"
      id=":rt:"
      role="menu"
      style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 8px); max-height: -8px;"
      tabindex="-1"
    >
      <div
        class="c7 c8"
        data-blade-component="base-box"
        style="transition-property: transform,opacity; transition-duration: 200ms;"
      >
        <div
          class="c9"
          data-blade-component="box"
        >
          <div
            class=""
            data-analytics-menu-header="header title"
            data-blade-component="menu-header"
          >
            <div
              class="c10"
              data-blade-component="base-box"
            >
              <div
                class="c11"
                data-blade-component="base-box"
              >
                <div
                  class="c12"
                  data-blade-component="base-box"
                >
                  <div
                    class="c13"
                    data-blade-component="base-box"
                  >
                    <div
                      class="c14"
                      data-blade-component="base-box"
                    >
                      <p
                        class="c15"
                        data-blade-component="text"
                        letter-spacing="25"
                      >
                        Header Title
                      </p>
                    </div>
                    <p
                      class="c16"
                      data-blade-component="text"
                      letter-spacing="50"
                    >
                      Subtitle
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="c17"
                data-blade-component="base-box"
              >
                <div
                  class="c18"
                  data-blade-component="box"
                />
              </div>
            </div>
          </div>
          <div
            class="c19 c20"
            data-blade-component="divider"
            role="separator"
          />
        </div>
        <div
          class=""
          data-blade-component="box"
        >
          <p
            class="c21"
            data-blade-component="text"
            letter-spacing="50"
          >
            Custom Slot
          </p>
        </div>
        <a
          class=" c22"
          data-analytics-menu-item="account"
          data-blade-component="base-box"
          href="/accounts"
          role="menuitem"
          type="button"
        >
          <div
            class="c23"
            data-blade-component="box"
          >
            <div
              class="c24"
              data-blade-component="box"
            />
            <div
              class="c25"
              data-blade-component="box"
            >
              <div
                class="c26"
                data-blade-component="box"
              >
                <p
                  class="c27"
                  data-blade-component="text"
                >
                  Account
                </p>
              </div>
              <div
                class=""
                data-blade-component="box"
              >
                <p
                  class="c16"
                  data-blade-component="text"
                  letter-spacing="50"
                >
                  Accounts
                </p>
              </div>
            </div>
            <div
              class="c28"
              data-blade-component="box"
            />
          </div>
        </a>
        <button
          class=" c22"
          data-blade-component="base-box"
          role="menuitem"
          type="button"
        >
          <div
            class="c23"
            data-blade-component="box"
          >
            <div
              class="c24"
              data-blade-component="box"
            >
              <svg
                aria-hidden="true"
                class="Svgweb__StyledSvg-vcmjs8-0"
                data-blade-component="icon"
                fill="none"
                height="12px"
                viewBox="0 0 24 24"
                width="12px"
              >
                <path
                  clip-rule="evenodd"
                  d="M12 2C9.23858 2 7 4.23858 7 7C7 9.76142 9.23858 12 12 12C14.7614 12 17 9.76142 17 7C17 4.23858 14.7614 2 12 2ZM9 7C9 5.34315 10.3431 4 12 4C13.6569 4 15 5.34315 15 7C15 8.65685 13.6569 10 12 10C10.3431 10 9 8.65685 9 7Z"
                  data-blade-component="svg-path"
                  fill="hsla(0, 0%, 2%, 1)"
                  fill-rule="evenodd"
                />
                <path
                  d="M8 14C5.23858 14 3 16.2386 3 19V21C3 21.5523 3.44772 22 4 22C4.55228 22 5 21.5523 5 21V19C5 17.3431 6.34315 16 8 16H16C17.6569 16 19 17.3431 19 19V21C19 21.5523 19.4477 22 20 22C20.5523 22 21 21.5523 21 21V19C21 16.2386 18.7614 14 16 14H8Z"
                  data-blade-component="svg-path"
                  fill="hsla(0, 0%, 2%, 1)"
                />
              </svg>
            </div>
            <div
              class="c29"
              data-blade-component="box"
            >
              <div
                class="c26"
                data-blade-component="box"
              >
                <p
                  class="c27"
                  data-blade-component="text"
                >
                  Profile
                </p>
              </div>
              <div
                class=""
                data-blade-component="box"
              />
            </div>
            <div
              class="c28"
              data-blade-component="box"
            />
          </div>
        </button>
        <button
          class=" c22"
          data-blade-component="base-box"
          role="menuitem"
          type="button"
        >
          <div
            class="c23"
            data-blade-component="box"
          >
            <div
              class="c24"
              data-blade-component="box"
            />
            <div
              class="c25"
              data-blade-component="box"
            >
              <div
                class="c26"
                data-blade-component="box"
              >
                <p
                  class="c27"
                  data-blade-component="text"
                >
                  Settings
                </p>
              </div>
              <div
                class=""
                data-blade-component="box"
              />
            </div>
            <div
              class="c28"
              data-blade-component="box"
            >
              <p
                class="c30"
                data-blade-component="text"
                letter-spacing="50"
              >
                Cmd + S
              </p>
            </div>
          </div>
        </button>
        <button
          class=" c31"
          data-blade-component="base-box"
          role="menuitem"
          type="button"
        >
          <div
            class="c23"
            data-blade-component="box"
          >
            <div
              class="c24"
              data-blade-component="box"
            />
            <div
              class="c25"
              data-blade-component="box"
            >
              <div
                class="c26"
                data-blade-component="box"
              >
                <p
                  class="c32"
                  data-blade-component="text"
                >
                  Log Out
                </p>
              </div>
              <div
                class=""
                data-blade-component="box"
              />
            </div>
            <div
              class="c28"
              data-blade-component="box"
            />
          </div>
        </button>
        <div
          class="c33"
          data-blade-component="box"
        >
          <div
            class="c19 c20"
            data-blade-component="divider"
            role="separator"
          />
          <div
            class="c34"
            data-analytics-menu-footer="true"
            data-blade-component="menu-footer"
          >
            <p
              class="c21"
              data-blade-component="text"
              letter-spacing="50"
            >
              Footer slot
            </p>
          </div>
        </div>
      </div>
    </div>
    <span
      data-floating-ui-focus-guard=""
      data-floating-ui-inert=""
      data-type="inside"
      role="button"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
      tabindex="0"
    />
  </div>
</body>
`;
